Image optimization for carousel and fixed gap below nav-bar

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -20,6 +20,12 @@ body {
     margin-left: 10%;
 }
 
+#carousel-example-generic {
+    position: absolute;
+    top: 1px;
+    left: 1px;
+}
+
 .carousel img{
     width: auto;
     height: 920px;
